// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuBar: index mapStateToProps 1`] = `
Object {
  "chainIds": Array [
    Object {
      "id": "ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9",
      "label": "airline cartel 1",
    },
    Object {
      "id": "558d611a3defd0bea21bb48a0fba099f63f8f5a088258526a4f81e68ada0379e",
      "label": "airline cartel 2",
    },
    Object {
      "id": "0353fd6fd7ef4b44fa5d1be0325fe312a5929f691e845dda132987ed74971a6f",
      "label": "airline cartel 3",
    },
  ],
  "oauthUser": Object {
    "address": "quxb0hj4dzgqwg83c52w0jvja6ukk022893z0w0k",
    "block_hash": "dcvn97pwo8yoh1ep9iwdo6hdulk9uxtz1dehps53emm6tpznqz7eba3p5p7pqoqc",
    "block_number": 107,
    "block_timestamp": "2022-11-09 23:13:38 UTC",
    "certificateString": "-----BEGIN CERTIFICATE-----
ZFu7U9gH/tPDNlYKwV0JofxMwMgUuvsgHdGeSJju4d300QNAOFgUV10WeUQBgK486lwUcvk6o8nAhJWYDFGbfnWcA8midQ6iicps/m7/T7fTu7V4M0vpldEWqfxekFuG/0AUyujhoqfwSfLJPmo0iQEP8LT3ilASHwzMjOetzeujV9tOemSm/3tKZcWkmqNx8ayKhb4mDdcclQ8zOAhNIkGBVd1fybuqqJHXLQC4yzbLHkWZ/OZTN2VhthECeF5ryiUUGZdOYxN2EFYnGPIIoqlpYsl4ab0gZvXK6bBw0vR/JvtpQPhuyw25VUIpa3UVAYRcdjABrAKjRovYdpEb8T002C4BnMCQMbWs8za6mhaG15zGQw5bRngQvbzjypVP7rlgyNJaaaPW0/EISVuSb1oycITPsxSneoUAHty1NfFaqRlFiH8hWAKVQ5nCiCAbjHDK03QjAmRecA82nn0DKZXqlf67LsKZN4KNbtKVEHCsTdivymmx3AokxtbMx2Ca3EIPc3h2Eykby3f7nR857UskcmL600HYs4tPIlF=
-----END CERTIFICATE-----
",
    "chainId": "",
    "commonName": "clinicaladmin",
    "country": "USA",
    "isValid": true,
    "organization": "BlockApps",
    "organizationalUnit": "Engineering",
    "owner": "6h2vbp7a08nevelwsyz6cnpuqr77diwi3wck720q",
    "parent": "0000000000000000000000000000000000000000",
    "publicKey": "-----BEGIN PUBLIC KEY-----
VRBEESfuZn6/YKyN8YQfL6uwbLFUPZFWTwZZswyXv6KRDbpXwBcQuoNuB5AIiQ9saR4yxBJRhaHLSQEZ/JzJBABTSxEWEtibIneBx0h8eAjVA3Zrpio9RMq/==
-----END PUBLIC KEY-----
",
    "record_id": "quxb0hj4dzgqwg83c52w0jvja6ukk022893z0w0k",
    "transaction_hash": "9hj1qyqu52wqn45kgk5c6doy3go7qfm3beuze4dw4rfdps8ffgperqxb08qv4y72",
    "transaction_sender": "a1n72r68azg8xgx5bnr6myz0npqs9setrw2tijoc",
    "userAddress": "bzvlsnw1xpmipq866nuxkyjxb2crh0jcw1t8olbj",
  },
}
`;

exports[`MenuBar: index renders Oauth mode component with values 1`] = `
"<nav className=\\"pt-navbar pt-dark smd-menu-bar\\">
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div>
      <Link to=\\"/home\\" replace={false}>
        <img src={{...}} alt=\\"Blockapps Logo\\" height=\\"50\\" className=\\"smd-menu-logo\\" />
      </Link>
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div className=\\"pt-navbar-heading\\">
      STRATO Management Dashboard
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-right\\">
    <span>
      <span className=\\"pt-navbar-divider\\" />
      <small className=\\"pt-text-muted\\">
        <div className=\\"pt-select\\">
          <Field className=\\"pt-input select-chain\\" component=\\"select\\" name=\\"chainLabel\\" onChange={[Function: onChange]} required={true}>
            <option>
               Main Chain 
            </option>
            <option value=\\"ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9\\">
              airline cartel 1
            </option>
            <option value=\\"558d611a3defd0bea21bb48a0fba099f63f8f5a088258526a4f81e68ada0379e\\">
              airline cartel 2
            </option>
            <option value=\\"0353fd6fd7ef4b44fa5d1be0325fe312a5929f691e845dda132987ed74971a6f\\">
              airline cartel 3
            </option>
          </Field>
        </div>
      </small>
      <span className=\\"pt-navbar-divider\\" />
    </span>
    <small className=\\"pt-text-muted\\">
      STRATO 
      N/A
    </small>
    <div>
      <span className=\\"pt-navbar-divider\\" />
      <a href=\\"/prometheus\\" target=\\"_black\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Prometheus Graphs
        </button>
      </a>
      <span>
        <span className=\\"pt-navbar-divider\\" />
        <small className=\\"pt-text-muted welcome-user\\">
           
           
        </small>
        <span className=\\"pt-navbar-divider\\" />
        <a target=\\"_blank\\" rel=\\"noopener noreferrer\\">
          <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: logout]}>
            Logout
          </button>
        </a>
      </span>
    </div>
  </div>
</nav>"
`;

exports[`MenuBar: index renders Oauth mode component without values 1`] = `"<Connect(Form(MenuBar)) isLoggedIn={false} currentUser={{...}} chainIds={{...}} openWalkThroughOverlay={[Function: mockConstructor]} location={{...}} initialValues={[undefined]} touchOnBlur={true} touchOnChange={false} persistentSubmitErrors={false} destroyOnUnmount={true} shouldAsyncValidate={[Function: defaultShouldAsyncValidate]} shouldValidate={[Function: defaultShouldValidate]} enableReinitialize={false} keepDirtyOnReinitialize={false} getFormState={[Function: getFormState]} pure={true} forceUnregisterOnUnmount={false} form=\\"menu-bar\\" />"`;

exports[`MenuBar: index renders non Oauth mode component with values 1`] = `
"<nav className=\\"pt-navbar pt-dark smd-menu-bar\\">
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div>
      <Link to=\\"/home\\" replace={false}>
        <img src={{...}} alt=\\"Blockapps Logo\\" height=\\"50\\" className=\\"smd-menu-logo\\" />
      </Link>
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div className=\\"pt-navbar-heading\\">
      STRATO Management Dashboard
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-right\\">
    <span>
      <span className=\\"pt-navbar-divider\\" />
      <small className=\\"pt-text-muted\\">
        <div className=\\"pt-select\\">
          <Field className=\\"pt-input select-chain\\" component=\\"select\\" name=\\"chainLabel\\" onChange={[Function: onChange]} required={true}>
            <option>
               Main Chain 
            </option>
            <option value=\\"ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9\\">
              airline cartel 1
            </option>
            <option value=\\"558d611a3defd0bea21bb48a0fba099f63f8f5a088258526a4f81e68ada0379e\\">
              airline cartel 2
            </option>
            <option value=\\"0353fd6fd7ef4b44fa5d1be0325fe312a5929f691e845dda132987ed74971a6f\\">
              airline cartel 3
            </option>
          </Field>
        </div>
      </small>
      <span className=\\"pt-navbar-divider\\" />
    </span>
    <small className=\\"pt-text-muted\\">
      STRATO 
      N/A
    </small>
    <div>
      <span className=\\"pt-navbar-divider\\" />
      <a href=\\"/prometheus\\" target=\\"_black\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Prometheus Graphs
        </button>
      </a>
    </div>
  </div>
</nav>"
`;

exports[`MenuBar: index renders non Oauth mode component without values 1`] = `
"<nav className=\\"pt-navbar pt-dark smd-menu-bar\\">
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div>
      <Link to=\\"/home\\" replace={false}>
        <img src={{...}} alt=\\"Blockapps Logo\\" height=\\"50\\" className=\\"smd-menu-logo\\" />
      </Link>
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-left\\">
    <div className=\\"pt-navbar-heading\\">
      STRATO Management Dashboard
    </div>
  </div>
  <div className=\\"pt-navbar-group pt-align-right\\">
    <span>
      <span className=\\"pt-navbar-divider\\" />
      <small className=\\"pt-text-muted\\">
        <div className=\\"pt-select\\">
          <Field className=\\"pt-input select-chain\\" component=\\"select\\" name=\\"chainLabel\\" onChange={[Function: onChange]} required={true}>
            <option>
               Main Chain 
            </option>
            <option value=\\"ff7ef45acb7a775018bc765b6fdeea432aaddfcd846cf6dd9442724266b1eac9\\">
              airline cartel 1
            </option>
            <option value=\\"558d611a3defd0bea21bb48a0fba099f63f8f5a088258526a4f81e68ada0379e\\">
              airline cartel 2
            </option>
            <option value=\\"0353fd6fd7ef4b44fa5d1be0325fe312a5929f691e845dda132987ed74971a6f\\">
              airline cartel 3
            </option>
          </Field>
        </div>
      </small>
      <span className=\\"pt-navbar-divider\\" />
    </span>
    <small className=\\"pt-text-muted\\">
      STRATO 
      N/A
    </small>
    <div>
      <span className=\\"pt-navbar-divider\\" />
      <a href=\\"/prometheus\\" target=\\"_black\\" rel=\\"noopener noreferrer\\">
        <button className=\\"pt-button pt-minimal pt-small\\" onClick={[Function: onClick]}>
          Prometheus Graphs
        </button>
      </a>
    </div>
  </div>
</nav>"
`;
